// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render snapshot button if it's a snapshot 1`] = `
<div
  className="sc-bdfBwQ jglDGf"
>
  <span />
  <div
    className="sc-gsTCUz hGoeBm"
  >
    <span
      className="sc-dlfnbm nhrYf"
    />
  </div>
</div>
`;

exports[`shows snapshot url 1`] = `
<div
  className="sc-bdfBwQ jglDGf"
>
  <span />
  <div
    className="sc-gsTCUz hGoeBm"
  >
    <span
      className="sc-dlfnbm nhrYf"
    />
  </div>
  <button
    className="sc-iBPRYJ iRbujy snapshotButton "
    onClick={[Function]}
  >
    <svg
      className="sc-fubCfw dnQem"
    >
      snapshot.svg
    </svg>
    <span>
      Create a 
      <br />
      Snapshot
    </span>
  </button>
</div>
`;
